--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=BookingApps2
 spring.datasource.url=jdbc:postgresql://localhost:5432/BookinAppSystem
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=aubrey
 spring.jpa.hibernate.ddl-auto=update
